--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.glassfish.jersey.examples</groupId>
+     <artifactId>server-async-standalone-client</artifactId>
+     <version>3.1.7</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
