--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -32,12 +33,18 @@
 			<scope>test</scope>
 		</dependency>
 	
-   <dependency>
-     <groupId>org.glassfish.jersey.examples</groupId>
-     <artifactId>server-async-standalone-client</artifactId>
-     <version>3.1.7</version>
-   </dependency>
- </dependencies>
+		<dependency>
+			<groupId>org.glassfish.jersey.examples</groupId>
+			<artifactId>server-async-standalone-client</artifactId>
+			<version>3.1.7</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version> <!-- Reemplaza con la versión más reciente de Gson -->
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
