--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-[{"name":"comer","time":"30 minutos ","person":"jose","isCompleted":false},{"name":"Dormir","time":"8 horas","person":"José Manuel ","isCompleted":false},{"name":"correr","time":"1 hora","person":"pedro","isCompleted":false},{"name":"","time":"","person":"","isCompleted":false},{"name":"","time":"","person":"","isCompleted":false}]
+[{"name":"comer","time":"30 minutos ","person":"jose","isCompleted":false}]
